manifests/moodle/web-tier/service-healthcheck.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: moodle
  name: moodle
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  ports:
    - name: moodle-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: moodle
    tier: frontend
  sessionAffinity: None
  type: ClusterIP
